--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,11 +13,10 @@ body {
     display: inline-block; 
   }
 
-  /* #row { */
-    /* float: left; */
-  /* } */
-
   
-  .gameTarget {
+  
+  .targetDiv {
+    font-size: 24px;
+      color: rgb(4, 42, 73);
     background-color:  rgb(0, 255, 42);
   }
