--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,3 +20,8 @@ body {
       color: rgb(4, 42, 73);
     background-color:  rgb(0, 255, 42);
   }
+
+  #gameDesc {
+    font-size: 14px;
+    background-color: rgba(243, 168, 145, 0.952);
+  }
