--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 
   
   
-  .targetDiv {
+  #gameTarget {
     font-size: 24px;
       color: rgb(4, 42, 73);
     background-color:  rgb(0, 255, 42);
